@@ -111,6 +111,7 @@ where XXXXXX is the bug number as listed below.
         barrier implementation
 358697  valgrind.h: Some code remains even when defining NVALGRIND
 359202  Add musl libc configure/compile
+360429  unhandled ioctl 0x530d with no size/direction hints (CDROMREADMODE1)
 367942  Segfault vgPlain_do_sys_sigaction (m_signals.c:1138)
 368863  WARNING: unhandled arm64-linux syscall: 100 (get_robust_list)
 368865  WARNING: unhandled arm64-linux syscall: 272 (kcmp)
